# baobab-collection-core

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: 01_specifications.md  RELEASE_CHECKLIST.md  architecture.md  business_domain.md  dev_diary.md  release_candidate_validation_1.0.0.md  release_checklist_execution_1.0.0.md  release_v1.0.0_publishing.md  synchronization.md
docs/features/: 01_project_bootstrap.md  02_core_domain_primitives.md  03_user_management.md  04_card_ownership_model.md  05_physical_copy_management.md  06_container_management.md  07_collection_business_services.md  08_offline_first_local_mutation_tracking.md  09_sync_core_abstractions.md  10_conflict_detection_and_resolution.md  11_in_memory_adapters_and_integration_tests.md  12_documentation_and_release_readiness.md  README.md
src/baobab_collection_core/: __init__.py
src/baobab_collection_core/application/: __init__.py  card_application_service.py  collection_business_service.py  collection_business_types.py  collection_counting_rules.py  container_application_service.py  mutation_tracking_service.py  physical_copy_application_service.py  sync_conflict_detector.py  sync_conflict_resolution_service.py  sync_conflict_resolution_strategy.py  sync_core_service.py  user_application_service.py
src/baobab_collection_core/domain/: __init__.py  audit_timestamps.py  collection_card.py  collection_user.py  conflict_resolution_decision.py  container.py  container_kind.py  domain_id.py  entity_base.py  entity_lifecycle_state.py  entity_metadata.py  entity_version.py  local_entity_kind.py  local_mutation.py  local_mutation_kind.py  physical_copy.py  physical_copy_business_status.py  physical_copy_condition.py  sync_conflict.py  sync_conflict_kind.py  sync_delta_kind.py  sync_dtos.py  sync_plan_action.py  sync_session_outcome.py  sync_state.py
src/baobab_collection_core/exceptions/: __init__.py  baobab_collection_core_exception.py  card_not_found_exception.py  container_cycle_exception.py  container_not_found_exception.py  duplicate_card_exception.py  duplicate_user_exception.py  invalid_card_exception.py  invalid_container_exception.py  invalid_local_mutation_exception.py  invalid_physical_copy_exception.py  invalid_sync_conflict_resolution_exception.py  invalid_sync_snapshot_exception.py  invalid_user_exception.py  mutation_not_found_exception.py  physical_copy_not_found_exception.py  user_not_found_exception.py  validation_exception.py
src/baobab_collection_core/infrastructure/: __init__.py
src/baobab_collection_core/ports/: __init__.py  card_repository_port.py  container_repository_port.py  local_mutation_journal_port.py  physical_copy_repository_port.py  remote_entity_sync_snapshot_port.py  user_repository_port.py
tests/: __init__.py
tests/baobab_collection_core/: __init__.py  test_package.py  test_public_api_contract.py  test_pyproject_release_metadata.py  test_readme_documented_imports.py
tests/baobab_collection_core/application/: __init__.py  test_card_application_service.py  test_collection_business_service.py  test_collection_counting_rules.py  test_container_application_service.py  test_mutation_tracking_service.py  test_physical_copy_application_service.py  test_sync_conflict_resolution.py  test_sync_core_service.py  test_user_application_service.py
tests/baobab_collection_core/domain/: __init__.py  test_audit_timestamps.py  test_collection_card.py  test_collection_user.py  test_container.py  test_container_kind.py  test_domain_id.py  test_entity_base.py  test_entity_lifecycle_state.py  test_entity_metadata.py  test_entity_version.py  test_local_entity_kind.py  (+9 more)
(+18 files in other folders)
