[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0,<76.0", "wheel>=0.41.0,<1.0"]

[project]
name = "baobab-collection-core"
version = "1.0.0"
description = "Noyau Python pour la gestion de collections (cartes, exemplaires, sync offline-first)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Baobab Collection" }]
keywords = ["collection", "domain", "sync", "offline-first"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.0.0,<2.0",
  "bandit[toml]>=1.7.0,<2.0",
  "black>=24.0.0,<26.0",
  "Flake8-pyproject>=1.2.0,<2.0",
  "flake8>=6.0.0,<8.0",
  "mypy>=1.8.0,<2.0",
  "pylint>=3.0.0,<4.0",
  "pytest>=7.4.0,<9.0",
  "pytest-cov>=4.1.0,<7.0",
]

[project.urls]
Homepage = "https://github.com/baobabgit/baobab-collection-core"
Repository = "https://github.com/baobabgit/baobab-collection-core"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"baobab_collection_core" = ["py.typed"]

# --- black ---
[tool.black]
line-length = 100
target-version = ["py311"]
include = "\\.pyi?$"
extend-exclude = "/(docs/tests/coverage|\\.venv|build|dist)/"

# --- isort (référence si ajout futur ; optionnel) ---

# --- pytest ---
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
  "integration: parcours multi-couches (adaptateurs + services + synchro)",
]
addopts = [
  "--strict-markers",
  "--strict-config",
  "-ra",
  "--cov=baobab_collection_core",
  "--cov-report=term-missing",
  "--cov-report=html:docs/tests/coverage/html",
  "--cov-report=xml:docs/tests/coverage/coverage.xml",
]

# --- coverage ---
[tool.coverage.run]
branch = true
parallel = false
data_file = "docs/tests/coverage/.coverage"
source = ["baobab_collection_core"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 90
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "\\.\\.\\.",
]

[tool.coverage.html]
directory = "docs/tests/coverage/html"

# --- mypy ---
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
show_error_codes = true
mypy_path = ["src", "."]
files = ["src/baobab_collection_core", "tests"]
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false
strict_equality = true

# --- pylint ---
[tool.pylint.main]
jobs = 0
py-version = "3.11"
ignore-paths = ["docs/tests/coverage/.*"]
persistent = false

[tool.pylint.format]
max-line-length = 100

[tool.pylint."messages control"]
disable = [
  "too-few-public-methods",
]

[tool.pylint."design"]
max-args = 10

[tool.pylint.similarities]
min-similarity-lines = 14

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "ok", "id", "_"]

# --- flake8 (via Flake8-pyproject) ---
[tool.flake8]
max-line-length = 100
max-complexity = 12
extend-ignore = ["E203", "W503"]
exclude = [
  ".git",
  "__pycache__",
  ".venv",
  "venv",
  "build",
  "dist",
  "docs/tests/coverage",
  "*.egg-info",
]

# --- bandit ---
[tool.bandit]
exclude_dirs = ["tests", "docs/tests/coverage"]
skips = ["B101"]
